@@ -1,3 +1,7 @@
+2014-01-04  Xian55  <hq.protonox@gmail.com>
+
+	* WayPoint.cs: 
+
 2013-11-17  Xian55  <hq.protonox@gmail.com>
 
 	* ChangeLog:
