@@ -1,3 +1,9 @@
+2014-01-04  Xian55  <hq.protonox@gmail.com>
+
+	* Block.cs:
+	* BlockManager.cs:
+	* BlockDetector.cs: 
+
 2013-11-17  Xian55  <hq.protonox@gmail.com>
 
 	* Block.cs:
